--- a/package.json
+++ b/package.json
@@ -91,10 +91,9 @@
     "@pdf-lib/standard-fonts": "^1.0.0",
     "@pdf-lib/upng": "^1.0.1",
     "pako": "^1.0.11",
-    "tslib": "^1.11.1"
+    "tslib": "^2.4.1"
   },
   "devDependencies": {
-    "@pdf-lib/fontkit": "^1.1.0",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.1",
@@ -104,6 +103,7 @@
     "@zerollup/ts-transform-paths": "^1.7.18",
     "downlevel-dts": "^0.5.0",
     "flamebearer": "^1.1.3",
+    "fontkit": "^2.0.2",
     "http-server": "^0.12.3",
     "jest": "^26.0.1",
     "node-fetch": "^2.6.0",
