Upgrade typescript to v4.9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
     "moduleResolution": "node",
 
     /* Plugins */
-    "plugins": [{ "transform": "@zerollup/ts-transform-paths" }]
+    "plugins": [{ "transform": "typescript-transform-paths" }]
   },
   "include": ["src/**/*"]
 }
