--- a/apps/node/tsconfig.json
+++ b/apps/node/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     /* Basic Options */
-    "target": "es5",
+    "target": "ES2020",
     "module": "commonjs",
     "composite": false,
     "incremental": true,
