--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,10 @@
     "moduleResolution": "node",
 
     /* Plugins */
-    "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }]
+    "plugins": [
+      { "transform": "typescript-transform-paths" },
+      { "transform": "typescript-transform-paths", "afterDeclarations": true }
+    ]
   },
   "include": ["src/**/*"]
 }
