Fix for `ts-patch`

--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "lint:tslint:tests": "tslint --project tests/tsconfig.json --fix",
     "lint:prettier": "prettier --write \"./{src,tests,apps}/**/*.{ts,js,json,html,css}\" --loglevel error",
     "build": "yarn build:cjs && yarn build:es && yarn build:downlevel-dts",
-    "build:cjs": "tsc --module commonjs --outDir cjs",
-    "build:es": "tsc --module es2020 --outDir es",
+    "build:cjs": "yarn prepare && tsc --module commonjs --outDir cjs",
+    "build:es": "yarn prepare && tsc --module es2020 --outDir es",
     "build:downlevel-dts": "rimraf ts3.4 && yarn downlevel-dts . ts3.4 && rimraf ts3.4/scratchpad",
     "scratchpad:start": "tsc --build scratchpad/tsconfig.json --watch",
     "scratchpad:run": "node scratchpad/build/scratchpad/index.js",
