--- a/package.json
+++ b/package.json
@@ -40,16 +40,16 @@
     "get:version": "node --eval 'console.log(require(`./package.json`).version)'",
     "clean": "rimraf ts3.4 build cjs es scratchpad/build coverage tsBuildInfo.json apps/node-build apps/node/tsBuildInfo.json isolate*.log flamegraph.html out.pdf",
     "typecheck": "tsc --noEmit --incremental false --tsBuildInfoFile null",
-    "test": "jest --config jest.json --runInBand",
-    "testw": "jest --config jest.json --watch",
-    "testc": "jest --config jest.json --coverage && open coverage/index.html",
+    "test": "tsc && jest --config jest.json --runInBand",
+    "testw": "tsc && jest --config jest.json --watch",
+    "testc": "tsc && jest --config jest.json --coverage && open coverage/index.html",
     "lint": "yarn lint:prettier && yarn lint:tslint:src && yarn lint:tslint:tests",
     "lint:tslint:src": "tslint --project tsconfig.json --fix",
     "lint:tslint:tests": "tslint --project tests/tsconfig.json --fix",
     "lint:prettier": "prettier --write \"./{src,tests,apps}/**/*.{ts,js,json,html,css}\" --loglevel error",
     "build": "yarn build:cjs && yarn build:es && yarn build:downlevel-dts",
-    "build:cjs": "yarn prepare && tsc --module commonjs --outDir cjs",
-    "build:es": "yarn prepare && tsc --module es2020 --outDir es",
+    "build:cjs": "tsc --module commonjs --outDir cjs",
+    "build:es": "tsc --module es2020 --outDir es",
     "build:downlevel-dts": "rimraf ts3.4 && yarn downlevel-dts . ts3.4 && rimraf ts3.4/scratchpad",
     "scratchpad:start": "tsc --build scratchpad/tsconfig.json --watch",
     "scratchpad:run": "node scratchpad/build/scratchpad/index.js",
