--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "build": "yarn build:cjs && yarn build:es && yarn build:downlevel-dts",
     "build:cjs": "tsc --module commonjs --outDir cjs",
     "build:es": "tsc --module es2020 --outDir es",
+    "build:umd": "yarn rollup --config rollup.config.mjs",
     "build:downlevel-dts": "rimraf ts3.4 && yarn downlevel-dts . ts3.4 && rimraf ts3.4/scratchpad",
     "scratchpad:start": "tsc --build scratchpad/tsconfig.json --watch",
     "scratchpad:run": "node scratchpad/build/scratchpad/index.js",
@@ -81,13 +82,17 @@
     "@pdf-lib/standard-fonts": "^1.0.0",
     "@pdf-lib/upng": "^1.0.1",
     "fontkit": "^2.0.2",
-    "pako": "^1.0.11",
+    "pako": "^2.1.0",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.3.0",
     "@types/jest": "^26.0.0",
     "@types/node-fetch": "^2.5.7",
-    "@types/pako": "^1.0.1",
+    "@types/pako": "^2.0.0",
     "downlevel-dts": "^0.5.0",
     "flamebearer": "^1.1.3",
     "http-server": "^0.12.3",
@@ -95,6 +100,7 @@
     "node-fetch": "^2.6.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "rollup": "^3.9.1",
     "ts-jest": "^26.1.0",
     "ts-patch": "^2.1.0",
     "tslint": "^6.1.3",
