--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "lint:tslint:src": "tslint --project tsconfig.json --fix",
     "lint:tslint:tests": "tslint --project tests/tsconfig.json --fix",
     "lint:prettier": "prettier --write \"./{src,tests,apps}/**/*.{ts,js,json,html,css}\" --loglevel error",
-    "build": "yarn build:cjs && yarn build:es && yarn build:downlevel-dts",
+    "build": "yarn build:cjs && yarn build:es && yarn build:umd && yarn build:downlevel-dts",
     "build:cjs": "tsc --module commonjs --outDir cjs",
     "build:es": "tsc --module es2020 --outDir es",
     "build:umd": "yarn rollup --config rollup.config.mjs",
