--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,10 +45,5 @@
       { "transform": "typescript-transform-paths", "afterDeclarations": true }
     ]
   },
-  "include": ["src/**/*"],
-  "exclude": [
-    // These files are left for future implementations.
-    "src/core/security/EncryptionV5.ts",
-    "src/core/security/StdSecurityHandlerR4.ts"
-  ],
+  "include": ["src/**/*"]
 }
