--- a/package.json
+++ b/package.json
@@ -80,10 +80,10 @@
     "yarn.lock"
   ],
   "dependencies": {
+    "@denkiyagi/fontkit": "2.0.4-mod.2024.1",
     "@pdf-lib/standard-fonts": "^1.0.0",
     "@pdf-lib/upng": "^1.0.1",
     "crypto-js": "^4.2.0",
-    "fontkit": "^2.0.2",
     "pako": "^2.1.0",
     "tslib": "^2.4.1"
   },
