--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "yarn.lock"
   ],
   "dependencies": {
-    "@denkiyagi/fontkit": "git+https://github.com/DenkiYagi/fontkit.git",
+    "@denkiyagi/fontkit": "2.0.4-mod.2024.2",
     "@pdf-lib/standard-fonts": "^1.0.0",
     "@pdf-lib/upng": "^1.0.1",
     "crypto-js": "^4.2.0",
