--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,9 +15,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm ci
-      - run: npm run trie
-      - run: npm run build
+      - run: yarn install
+      - run: yarn build
       - uses: actions/upload-artifact@v4
         with:
           name: build-output
@@ -43,6 +42,6 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-output
-      - run: npm publish --access public
+      - run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
