--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: yarn
       - run: yarn install
       - run: yarn build
       - uses: actions/upload-artifact@v4
@@ -37,8 +38,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          registry-url: https://npm.pkg.github.com/
-          scope: '@denkiyagi'
+          cache: yarn
       - uses: actions/download-artifact@v4
         with:
           name: build-output
