fontkit をフォーク版に切り替え & 関連処理を最新化 (#7)
* coreモジュール等のexposeをrevert

* use @denkiyagi/fontkit instead of the original

* expand EmbedFontOptions and use preset shapers at default

* docs: update MODIFICATIONS.md

* update yarn.lock

* refactor: CustomFontEmbedder

* style: format code

* refactor: preset shapers

* fix: respect glyph metrics when embedding vertical fonts

* Add methods to PDFFont to get raw font instance (such as fontkit.TTFFont)

* improve and move preset shaper classes

* feat: enable to pass glyph IDs to `PDFPage#drawText`

* GlyphLine 型で TypedArray を受け付けるよう拡張

* add NOTE comments

* style: format code

* style: format code

* EmbedFontAdvancedOptions 型で、直接 Shaper 型の値を受け付けるように変更

* PDFPageDrawTextOptions 型に fontLayoutAdvancedParams プロパティーを追加。OpenType Feature などを切り替えられるように

* style: format code

* fix: CustomFontSubsetEmbedder#encodeText 実装変更漏れを修正

* docs: update MODIFICATIONS.md

* docs: update MODIFICATIONS.md

* 1.17.1-mod.2024.1

* fontkit を GitHub からインストールする

* ci: update test.yml

* ci: prettier バージョン違いで yarn lint が引っかかっていたので upgrade

* fontkit の バージョンを 2.0.4-mod.2024.2 に設定（GitHub Packages 前提）

* ci: update test.yml

* GitHub Packages 自動publish設定

* fix directories to publish

* fix workflow

* docs: update RELEASING

* remove scripts that include "yarn publish"

* version を 1.17.1-mod.2025.1 に更新

* add npmrc

* ci: update GitHub workflows

* revert change in pr-labeler.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,29 +2,31 @@ name: Test
 
 on:
   push:
-    branches: [ "denkiyagi-fork" ]
+    branches: ['denkiyagi-fork']
   pull_request:
-    branches: [ "denkiyagi-fork" ]
+    branches: ['denkiyagi-fork']
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: read
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x]
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: yarn
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
 
-    - run: yarn install --frozen-lockfile
-
-    - run: yarn typecheck
-    - run: yarn lint
-    - run: yarn test
+      - run: yarn install
+      - run: yarn typecheck
+      - run: yarn lint
+      - run: yarn test
