--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@denkiyagi/pdf-lib",
-  "version": "1.17.1-mod.2024.1-alpha.0",
+  "version": "1.17.1-mod.2025.1",
   "description": "A modified version of pdf-lib. Create and modify PDF files with JavaScript",
   "author": "DenkiYagi Inc. (modified version author), Andrew Dillon <andrew.dillon.j@gmail.com> (orignal version author)",
   "contributors": [
@@ -33,8 +33,6 @@
   ],
   "scripts": {
     "prepare": "ts-patch install -s",
-    "release:latest": "yarn publish --tag latest && yarn pack && yarn release:tag",
-    "release:next": "yarn publish --tag next",
     "release:prep": "yarn clean && yarn lint && yarn typecheck && yarn test && yarn build",
     "release:tag": "TAG=\"v$(yarn --silent get:version)\" && git tag $TAG && git push origin $TAG",
     "get:version": "node --eval 'console.log(require(`./package.json`).version)'",
@@ -58,9 +56,9 @@
     "apps:node": "tsc --build apps/node/tsconfig.json && node apps/node-build/index.js",
     "apps:web": "http-server -c-1 ."
   },
-  "main": "cjs/all.js",
-  "module": "es/all.js",
-  "types": "cjs/all.d.ts",
+  "main": "cjs/index.js",
+  "module": "es/index.js",
+  "types": "cjs/index.d.ts",
   "typesVersions": {
     "<=3.5": {
       "*": [
@@ -80,10 +78,10 @@
     "yarn.lock"
   ],
   "dependencies": {
+    "@denkiyagi/fontkit": "2.0.4-mod.2024.2",
     "@pdf-lib/standard-fonts": "^1.0.0",
     "@pdf-lib/upng": "^1.0.1",
     "crypto-js": "^4.2.0",
-    "fontkit": "^2.0.2",
     "pako": "^2.1.0",
     "tslib": "^2.4.1"
   },
@@ -101,7 +99,7 @@
     "http-server": "^0.12.3",
     "jest": "^26.0.1",
     "node-fetch": "^2.6.0",
-    "prettier": "^2.0.5",
+    "prettier": "^3.4.2",
     "rimraf": "^3.0.2",
     "rollup": "^3.9.1",
     "ts-jest": "^26.1.0",
