--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,6 +17,8 @@ jobs:
           node-version: 18
           cache: yarn
       - run: yarn install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: yarn build
       - uses: actions/upload-artifact@v4
         with:
@@ -38,7 +40,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
       - uses: actions/download-artifact@v4
         with:
           name: build-output
